# Software-Engineering

./: .gitignore  README.md  pyproject.toml  server.sh
.github/workflows/: ruff.yml
app/: main.py
app/core/: agent_prompts.py  kis_auth.py  logging.py
app/schemas/: agent.py  core.py
app/tasks/: auth_scheduler.py
